# trogon-alconna

./: .gitignore  pyproject.toml
examples/: demo.py
trogon/: detect_run_string.py  introspect.py  run_command.py  trogon.py
trogon/widgets/: command_info.py  command_tree.py  form.py  multiple_choice.py  parameter_controls.py
