[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "trogon"
version = "0.5.0"
description = "Automatically generate a Textual TUI for your Click CLI"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
    {name = "Darren Burns", email = "darrenb900@gmail.com"},
]
dependencies = [
    "textual>=0.26.0",
    "arclet-alconna>=1.7.43"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = ["Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "Intended Audience :: Information Technology", "Intended Audience :: Other Audience", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows :: Windows 10", "Operating System :: Microsoft :: Windows :: Windows 11", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Topic :: Software Development :: Documentation"]

[project.urls]
homepage = "https://github.com/Textualize/trogon"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black<24.0.0,>=23.3.0",
    "pytest<8.0.0,>=7.3.1",
    "textual[dev]>=0.26.0",
]

[tool.pdm.build]
includes = ["trogon"]
